--- a/views/provider/createaudition.ejs
+++ b/views/provider/createaudition.ejs
@@ -11,7 +11,7 @@
                 </div>
                 <div class="body">
                     <div class="demo-masked-input">
-                        <form class="provider">
+                        <form class="provider" enctype="multipart/form-data">
                             <div class="row clearfix">
                                 <div class="col-md-6">
                                     <b>Name</b>
@@ -109,7 +109,7 @@
                 method: "POST",
                 body: JSON.stringify(data),
                 headers: {
-                    "Content-Type": "application/json"
+                    "Content-Type": "multipart/form-data"
                 }
             })
                 .then(res => res.json())
@@ -125,6 +125,9 @@
                 .catch(err => {
                     console.log(err);
                 });
+
+            // post formdata to server
+
         });
     </script>
 
