create audition fix

--- a/views/audition.ejs
+++ b/views/audition.ejs
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="container" style="overflow: hidden; min-height: 777px;">
+    <div class="container">
         <header>
             <div class="logo">
                 <h1>logo</h1>
@@ -34,8 +34,8 @@
         </header>
         <div class="transform" style="transition: transform .3s ease .3s;">
             <section class="largeImg">
-                <img style="height: 350px; Width:414px;object-fit: cover;" class="changeImg"
-                    src="/assest/OLIVE/bbnFull.png" />
+                <img style="height: 350px; Width:414px;object-fit: cover; " class="changeImg"
+                    src="<%= audition.auditionLogo %> " />
                 <!-- <img src="/assest/OLIVE/guy.png" /> -->
                 <!-- <img class="carousel" src="/assest/OLIVE/Group 2.png" /> -->
             </section>
@@ -77,13 +77,13 @@
                 </form>
             </section>
         </div>
-        <div id="forlivevideo"
+        <!-- <div id="forlivevideo"
             style="min-height: 730px; display: flex; flex-direction: column; transform: translateY(730px);transition: transform .5s ease .5s;  align-items: center; gap: 10px; padding: .55em; background-color: black;">
             <h4 class="content_header">Big Brother Naija 2022</h4>
             <iframe allowfullscreen height="730px" allow="camera; microphone;" width="100%" src="" frameborder="0"
                 name="restream">
             </iframe>
-        </div>
+        </div> -->
     </div>
     <script>
 
