--- a/public/styles/brand.css
+++ b/public/styles/brand.css
@@ -103,6 +103,7 @@ header{
     height: 24px;
 }
 .largeImg{
+    background-color: black;
     position: relative;
     bottom: 0;
     transition: opacity 2s ease-in .5s;
