--- a/views/provider/profile.ejs
+++ b/views/provider/profile.ejs
@@ -57,7 +57,7 @@
                                                     <div class="form-line focused">
                                                         <input type="text" class="form-control" id="NameSurname"
                                                             name="NameSurname" placeholder="Name Surname"
-                                                            value="Marc K. Hammond" required="">
+                                                            value="<%= username %> " required="">
                                                     </div>
                                                 </div>
                                             </div>
@@ -66,7 +66,7 @@
                                                 <div class="col-sm-10">
                                                     <div class="form-line focused">
                                                         <input type="email" class="form-control" id="Email" name="Email"
-                                                            placeholder="Email" value="example@example.com" required="">
+                                                            placeholder="Email" value="<%= email %> " required="">
                                                     </div>
                                                 </div>
                                             </div>
@@ -83,12 +83,13 @@
                                                 </div>
                                             </div>
                                             <div class="form-group">
-                                                <label for="InputSkills" class="col-sm-2 control-label">Skills</label>
+                                                <label for="InputSkills" class="col-sm-2 control-label">Role</label>
 
                                                 <div class="col-sm-10">
                                                     <div class="form-line">
                                                         <input type="text" class="form-control" id="InputSkills"
-                                                            name="InputSkills" placeholder="Skills">
+                                                            name="InputSkills" placeholder="Skills"
+                                                            value="<%= role %> ">
                                                     </div>
                                                 </div>
                                             </div>
