--- a/views/provider/createaudition.ejs
+++ b/views/provider/createaudition.ejs
@@ -62,6 +62,7 @@
                                     <h5>Choose Audition Pattern</h5>
                                     <select class="form-select" aria-label="Default select example"
                                         name="auditionPattern">
+                                        <option selected>auditionPattern</option>
                                         <option value="0">Upload</option>
                                         <option value="1">Live</option>
                                     </select>
@@ -70,6 +71,7 @@
                                     <h5>Choose Audition Charges</h5>
                                     <select class="form-select" aria-label="Default select example"
                                         name="auditionCharges">
+                                        <option selected>auditionCharges</option>
                                         <option value="0">Free</option>
                                         <option value="1">Payment</option>
                                     </select>
@@ -109,7 +111,7 @@
                 method: "POST",
                 body: JSON.stringify(data),
                 headers: {
-                    "Content-Type": "multipart/form-data"
+                    "Content-Type": "application/json"
                 }
             })
                 .then(res => res.json())
