--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,7 +23,7 @@
                 <div class="user">
                     <img src="/assest/OLIVE/Group-1.png" alt="" srcset="">
                 </div>
-                <a href="/">
+                <a href="/dashboard">
                     <div class="home">
                         <img src="/assest/OLIVE/Group.png" alt="" srcset="">
                     </div>
