--- a/views/provider/createaudition.ejs
+++ b/views/provider/createaudition.ejs
@@ -11,7 +11,7 @@
                 </div>
                 <div class="body">
                     <div class="demo-masked-input">
-                        <form class="provider" enctype="multipart/form-data">
+                        <form class="provider" enctype="application/x-www-form-urlencoded" name="fileinfo">
                             <div class="row clearfix">
                                 <div class="col-md-6">
                                     <b>Name</b>
@@ -62,7 +62,6 @@
                                     <h5>Choose Audition Pattern</h5>
                                     <select class="form-select" aria-label="Default select example"
                                         name="auditionPattern">
-                                        <option selected>auditionPattern</option>
                                         <option value="0">Upload</option>
                                         <option value="1">Live</option>
                                     </select>
@@ -71,7 +70,6 @@
                                     <h5>Choose Audition Charges</h5>
                                     <select class="form-select" aria-label="Default select example"
                                         name="auditionCharges">
-                                        <option selected>auditionCharges</option>
                                         <option value="0">Free</option>
                                         <option value="1">Payment</option>
                                     </select>
@@ -110,9 +108,7 @@
             fetch("/provider/createaudition", {
                 method: "POST",
                 body: JSON.stringify(data),
-                headers: {
-                    "Content-Type": "application/json"
-                }
+
             })
                 .then(res => res.json())
                 .then(res => {
@@ -127,9 +123,6 @@
                 .catch(err => {
                     console.log(err);
                 });
-
-            // post formdata to server
-
         });
     </script>
 
