--- a/views/audition.ejs
+++ b/views/audition.ejs
@@ -34,7 +34,7 @@
         </header>
         <div class="transform" style="transition: transform .3s ease .3s;">
             <section class="largeImg">
-                <img style="height: 270px; Width:414px;object-fit: cover; " class="changeImg"
+                <img style="height: 300px; Width:414px;object-fit: cover; " class="changeImg"
                     src="<%= audition.auditionLogo %> " />
                 <!-- <img src="/assest/OLIVE/guy.png" /> -->
                 <!-- <img class="carousel" src="/assest/OLIVE/Group 2.png" /> -->
@@ -47,9 +47,7 @@
                     <p>
                         <%= audition.auditionDescription %>
                     </p>
-                    <small>
-                        Audition Price : <%= audition.auditionPrice %>
-                    </small>
+
                     <div class="d">
                         <span class="content_header">
                             <%= audition.auditionStartDate %>
@@ -69,7 +67,7 @@
                                     <div>
                                         <input type="file" name="" id="upload" hidden>
                                         <label for="upload">
-                                            <img src="/assest/OLIVE/uploadGold.png" alt="" srcset="">
+                                            <img height="50px" src="/assest/OLIVE/uploadGold.png" alt="" srcset="">
 
                                             <h6>Upload your video</h6>
                                         </label>
