--- a/views/provider/partials/footer.ejs
+++ b/views/provider/partials/footer.ejs
@@ -1,3 +1,5 @@
+<script src="https://api.ravepay.co/flwv3-pug/getpaidx/api/flwpbf-inline.js"></script>
+
 <!-- Jquery Core Js -->
 <script src="/assets/plugins/jquery/jquery.min.js"></script>
 
@@ -41,7 +43,7 @@
 <script src="/assets/js/demo.js"></script>
 
 <!-- Jquery DataTable Plugin Js -->
-<!-- <script src="/assets/plugins/jquery-datatable/jquery.dataTables.js"></script>
+<script src="/assets/plugins/jquery-datatable/jquery.dataTables.js"></script>
 <script src="/assets/plugins/jquery-datatable/skin/bootstrap/js/dataTables.bootstrap.js"></script>
 <script src="/assets/plugins/jquery-datatable/extensions/export/dataTables.buttons.min.js"></script>
 <script src="/assets/plugins/jquery-datatable/extensions/export/buttons.flash.min.js"></script>
@@ -49,7 +51,7 @@
 <script src="/assets/plugins/jquery-datatable/extensions/export/pdfmake.min.js"></script>
 <script src="/assets/plugins/jquery-datatable/extensions/export/vfs_fonts.js"></script>
 <script src="/assets/plugins/jquery-datatable/extensions/export/buttons.html5.min.js"></script>
-<script src="/assets/plugins/jquery-datatable/extensions/export/buttons.print.min.js"></script> -->
+<script src="/assets/plugins/jquery-datatable/extensions/export/buttons.print.min.js"></script>
 
 </body>
 
