--- a/views/provider/auditions.ejs
+++ b/views/provider/auditions.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <title>Olive Provider</title>
+    <title>Jquery DataTable | Bootstrap Based Admin Template - Material Design</title>
     <!-- Favicon-->
     <link rel="icon" href="../../favicon.ico" type="image/x-icon">
 
@@ -21,6 +21,9 @@
 
     <!-- Animation Css -->
     <link href="/assets/plugins/animate-css/animate.css" rel="stylesheet" />
+
+    <!-- JQuery DataTable Css -->
+    <link href="/assets/plugins/jquery-datatable/skin/bootstrap/css/dataTables.bootstrap.css" rel="stylesheet">
 
     <!-- Custom Css -->
     <link href="/assets/css/style.css" rel="stylesheet">
@@ -50,6 +53,11 @@
             background: none;
             padding: 10px;
             font-weight: bolder;
+        }
+
+        tbody:hover {
+
+            cursor: pointer;
         }
     </style>
 </head>
@@ -302,17 +310,13 @@
         <!-- Left Sidebar -->
         <aside id="leftsidebar" class="sidebar">
             <!-- User Info -->
-            <div class="user-info" style="">
+            <div class="user-info" style="background-color: #FF9800 !important; background-image: none;">
                 <div class="image">
                     <img src="../../images/user.png" width="48" height="48" alt="User" />
                 </div>
                 <div class="info-container">
-                    <div class="name" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <%= provider.username %>
-                    </div>
-                    <div class="email">
-                        <%= provider.email %>
-                    </div>
+                    <div class="name" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">John Doe</div>
+                    <div class="email">john.doe@example.com</div>
                     <div class="btn-group user-helper-dropdown">
                         <i class="material-icons" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="true">keyboard_arrow_down</i>
@@ -332,9 +336,8 @@
             <!-- Menu -->
             <div class="menu">
                 <ul class="list">
-                    <li class="active"></li>
                     <li class="header">MAIN NAVIGATION</li>
-                    <li class="">
+                    <li class="active">
                         <a href="/provider/dashboard">
                             <i class="material-icons">home</i>
                             <span>Dashboard</span>
@@ -349,7 +352,7 @@
                     <li>
                         <a href="/provider/auditions">
                             <i class="material-icons">layers</i>
-                            <span>View Audition</span>
+                            <span>View Auditions</span>
                         </a>
                     </li>
 
@@ -370,148 +373,161 @@
             </div>
             <!-- #Footer -->
         </aside>
-        <!-- #END# Left Sidebar -->
-        <!-- Right Sidebar -->
-        <!-- <aside id="rightsidebar" class="right-sidebar">
-            <ul class="nav nav-tabs tab-nav-right" role="tablist">
-                <li role="presentation" class="active"><a href="#skins" data-toggle="tab">SKINS</a></li>
-                <li role="presentation"><a href="#settings" data-toggle="tab">SETTINGS</a></li>
-            </ul>
-            <div class="tab-content">
-                <div role="tabpanel" class="tab-pane fade in active in active" id="skins">
-                    <ul class="demo-choose-skin">
-                        <li data-theme="red" class="active">
-                            <div class="red"></div>
-                            <span>Red</span>
-                        </li>
-                        <li data-theme="pink">
-                            <div class="pink"></div>
-                            <span>Pink</span>
-                        </li>
-                        <li data-theme="purple">
-                            <div class="purple"></div>
-                            <span>Purple</span>
-                        </li>
-                        <li data-theme="deep-purple">
-                            <div class="deep-purple"></div>
-                            <span>Deep Purple</span>
-                        </li>
-                        <li data-theme="indigo">
-                            <div class="indigo"></div>
-                            <span>Indigo</span>
-                        </li>
-                        <li data-theme="blue">
-                            <div class="blue"></div>
-                            <span>Blue</span>
-                        </li>
-                        <li data-theme="light-blue">
-                            <div class="light-blue"></div>
-                            <span>Light Blue</span>
-                        </li>
-                        <li data-theme="cyan">
-                            <div class="cyan"></div>
-                            <span>Cyan</span>
-                        </li>
-                        <li data-theme="teal">
-                            <div class="teal"></div>
-                            <span>Teal</span>
-                        </li>
-                        <li data-theme="green">
-                            <div class="green"></div>
-                            <span>Green</span>
-                        </li>
-                        <li data-theme="light-green">
-                            <div class="light-green"></div>
-                            <span>Light Green</span>
-                        </li>
-                        <li data-theme="lime">
-                            <div class="lime"></div>
-                            <span>Lime</span>
-                        </li>
-                        <li data-theme="yellow">
-                            <div class="yellow"></div>
-                            <span>Yellow</span>
-                        </li>
-                        <li data-theme="amber">
-                            <div class="amber"></div>
-                            <span>Amber</span>
-                        </li>
-                        <li data-theme="orange">
-                            <div class="orange"></div>
-                            <span>Orange</span>
-                        </li>
-                        <li data-theme="deep-orange">
-                            <div class="deep-orange"></div>
-                            <span>Deep Orange</span>
-                        </li>
-                        <li data-theme="brown">
-                            <div class="brown"></div>
-                            <span>Brown</span>
-                        </li>
-                        <li data-theme="grey">
-                            <div class="grey"></div>
-                            <span>Grey</span>
-                        </li>
-                        <li data-theme="blue-grey">
-                            <div class="blue-grey"></div>
-                            <span>Blue Grey</span>
-                        </li>
-                        <li data-theme="black">
-                            <div class="black"></div>
-                            <span>Black</span>
-                        </li>
-                    </ul>
+        <section class="content">
+            <div class="container-fluid">
+                <div class="block-header">
+                    <h2>
+                        JQUERY DATATABLES
+                        <small>Taken from <a href="https://datatables.net/" target="_blank">datatables.net</a></small>
+                    </h2>
                 </div>
-                <div role="tabpanel" class="tab-pane fade" id="settings">
-                    <div class="demo-settings">
-                        <p>GENERAL SETTINGS</p>
-                        <ul class="setting-list">
-                            <li>
-                                <span>Report Panel Usage</span>
-                                <div class="switch">
-                                    <label><input type="checkbox" checked><span class="lever"></span></label>
+
+                <div class="row clearfix">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <div class="card">
+                            <div class="header">
+                                <h2>
+                                    EXPORTABLE TABLE
+                                </h2>
+                                <ul class="header-dropdown m-r--5">
+                                    <li class="dropdown">
+                                        <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown"
+                                            role="button" aria-haspopup="true" aria-expanded="false">
+                                            <i class="material-icons">more_vert</i>
+                                        </a>
+                                        <ul class="dropdown-menu pull-right">
+                                            <li><a href="javascript:void(0);">Action</a></li>
+                                            <li><a href="javascript:void(0);">Another action</a></li>
+                                            <li><a href="javascript:void(0);">Something else here</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="body">
+                                <div class="table-responsive">
+                                    <table
+                                        class="table table-bordered table-striped table-hover dataTable js-exportable">
+                                        <thead>
+                                            <tr>
+                                                <th>Audition Name</th>
+                                                <th>Audition Description</th>
+                                                <th>Audition Price</th>
+                                                <th>Audition Charges</th>
+                                                <th>Audition Pattern</th>
+                                                <th>Timestamp</th>
+                                            </tr>
+                                        </thead>
+                                        <tfoot>
+                                            <tr>
+                                                <th>Audition Name</th>
+                                                <th>Audition Description</th>
+                                                <th>Audition Price</th>
+                                                <th>Audition Charges</th>
+                                                <th>Audition Pattern</th>
+                                                <th>Timestamp</th>
+                                            </tr>
+                                        </tfoot>
+                                        <tbody class="tbody">
+
+                                            <% auditions.forEach(element=> { %>
+                                                <a href="/digitalauditionplatform/<%= element._id %> ">
+
+                                                    <tr data-id="<%= element._id %> ">
+                                                        <td>
+
+                                                            <%= element.auditionName %>
+                                                        </td>
+
+                                                        <td>
+                                                            <%= element.auditionDescription %>
+                                                        </td>
+                                                        <td>
+                                                            <%= element.auditionPrice %>
+                                                        </td>
+                                                        <td>
+                                                            <% if (element.auditionCharges===0 ) { %>
+                                                                <p>Free</p>
+                                                                <% } %>
+                                                                    <% if (element.auditionCharges===1 ) { %>
+                                                                        <p>Payment</p>
+                                                                        <% } %>
+
+                                                        </td>
+                                                        <td>
+                                                            <% if (element.auditionPattern==="0" ) { %>
+                                                                <p>Upload</p>
+                                                                <% } %>
+                                                                    <% if (element.auditionPattern==="1" ) { %>
+                                                                        <p>Record</p>
+                                                                        <% } %>
+
+                                                        </td>
+                                                        <td>
+                                                            <%= element.created_at %>
+                                                        </td>
+
+                                                    </tr>
+                                                </a>
+                                                <% }) %>
+
+
+                                        </tbody>
+                                    </table>
                                 </div>
-                            </li>
-                            <li>
-                                <span>Email Redirect</span>
-                                <div class="switch">
-                                    <label><input type="checkbox"><span class="lever"></span></label>
-                                </div>
-                            </li>
-                        </ul>
-                        <p>SYSTEM SETTINGS</p>
-                        <ul class="setting-list">
-                            <li>
-                                <span>Notifications</span>
-                                <div class="switch">
-                                    <label><input type="checkbox" checked><span class="lever"></span></label>
-                                </div>
-                            </li>
-                            <li>
-                                <span>Auto Updates</span>
-                                <div class="switch">
-                                    <label><input type="checkbox" checked><span class="lever"></span></label>
-                                </div>
-                            </li>
-                        </ul>
-                        <p>ACCOUNT SETTINGS</p>
-                        <ul class="setting-list">
-                            <li>
-                                <span>Offline</span>
-                                <div class="switch">
-                                    <label><input type="checkbox"><span class="lever"></span></label>
-                                </div>
-                            </li>
-                            <li>
-                                <span>Location Permission</span>
-                                <div class="switch">
-                                    <label><input type="checkbox" checked><span class="lever"></span></label>
-                                </div>
-                            </li>
-                        </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <!-- #END# Exportable Table -->
             </div>
-        </aside> -->
-        <!-- #END# Right Sidebar -->
-    </section>
+        </section>
+
+        <!-- Jquery Core Js -->
+        <script src="/assets/plugins/jquery/jquery.min.js"></script>
+
+        <!-- Bootstrap Core Js -->
+        <script src="/assets/plugins/bootstrap/js/bootstrap.js"></script>
+
+        <!-- Select Plugin Js -->
+        <script src="/assets/plugins/bootstrap-select/js/bootstrap-select.js"></script>
+
+        <!-- Slimscroll Plugin Js -->
+        <script src="/assets/plugins/jquery-slimscroll/jquery.slimscroll.js"></script>
+
+        <!-- Waves Effect Plugin Js -->
+        <script src="/assets/plugins/node-waves/waves.js"></script>
+
+        <!-- Jquery DataTable Plugin Js -->
+        <script src="/assets/plugins/jquery-datatable/jquery.dataTables.js"></script>
+        <script src="/assets/plugins/jquery-datatable/skin/bootstrap/js/dataTables.bootstrap.js"></script>
+        <script src="/assets/plugins/jquery-datatable/extensions/export/dataTables.buttons.min.js"></script>
+        <script src="/assets/plugins/jquery-datatable/extensions/export/buttons.flash.min.js"></script>
+        <script src="/assets/plugins/jquery-datatable/extensions/export/jszip.min.js"></script>
+        <script src="/assets/plugins/jquery-datatable/extensions/export/pdfmake.min.js"></script>
+        <script src="/assets/plugins/jquery-datatable/extensions/export/vfs_fonts.js"></script>
+        <script src="/assets/plugins/jquery-datatable/extensions/export/buttons.html5.min.js"></script>
+        <script src="/assets/plugins/jquery-datatable/extensions/export/buttons.print.min.js"></script>
+
+        <!-- Custom Js -->
+        <script src="/assets/js/admin.js"></script>
+        <script src="/assets/js/pages/tables/jquery-datatable.js"></script>
+
+        <!-- Demo Js -->
+        <script src="/assets/js/demo.js"></script>
+
+        <script>
+            const tr = document.querySelectorAll(".tbody tr");
+            tr.forEach(element => {
+                element.addEventListener("click", function (e) {
+                    // get the id of the clicked row
+                    const id = this.getAttribute("data-id");
+                    // redirect to the edit page
+                    window.location.href = `auditions/${id}`;
+                    // window.location.href = "/auditions/" + element.dataset.id;
+                });
+            });
+
+        </script>
+</body>
+
+</html>
