--- a/views/provider/profile.ejs
+++ b/views/provider/profile.ejs
@@ -57,7 +57,7 @@
                                                     <div class="form-line focused">
                                                         <input type="text" class="form-control" id="NameSurname"
                                                             name="NameSurname" placeholder="Name Surname"
-                                                            value="<%= username %> " required="">
+                                                            value="<%= provider.username %> " required="">
                                                     </div>
                                                 </div>
                                             </div>
@@ -66,7 +66,8 @@
                                                 <div class="col-sm-10">
                                                     <div class="form-line focused">
                                                         <input type="email" class="form-control" id="Email" name="Email"
-                                                            placeholder="Email" value="<%= email %> " required="">
+                                                            placeholder="Email" value="<%= provider.email %> "
+                                                            required="">
                                                     </div>
                                                 </div>
                                             </div>
@@ -89,7 +90,7 @@
                                                     <div class="form-line">
                                                         <input type="text" class="form-control" id="InputSkills"
                                                             name="InputSkills" placeholder="Skills"
-                                                            value="<%= role %> ">
+                                                            value="<%= provider.role %> ">
                                                     </div>
                                                 </div>
                                             </div>
